--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -1,12 +1,20 @@
-[env:teensy31]
-platform = teensy
+; [env:teensy31]
+; platform = teensy
+; framework = arduino
+; board = teensy31
+
+[env:mega]
+platform = atmelavr
 framework = arduino
-board = teensy31
+board = megaatmega2560
 
 ; [env:mega]
 ; platform = atmelavr
 ; framework = arduino
 ; board = megaatmega2560
 
-upload_protocol = teensy-cli
+; upload_protocol = teensy-cli
+; upload_port = /dev/linobase
+
+upload_protocol = stk500v2
 upload_port = /dev/linobase
