adding catkin tools

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -17,4 +17,4 @@ board = megaatmega2560
 ; upload_port = /dev/linobase
 
 upload_protocol = stk500v2
-upload_port = /dev/linobase
+upload_port = /dev/megabase
